--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/grilledcheese-btn');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
     background-color: #009b9b;
     display: flex;
@@ -17,10 +19,17 @@ body {
 }
 .title {
     border: 1px solid black;
+    font-size: 50px;
     font-family: 'GrilledCheese BTN', sans-serif;
+    color: #c4d16f; 
+      text-shadow: 
+        4px 4px 0px #2e0c57,   
+        6px 6px 0px #000;
+    /* position: absolute; */
 }
 .btn {
-    font-family: 'Press Start 2P', sans-serif;
+    font-family: "Press Start 2P", system-ui;
+    /* font-style: normal; */
     font-size: 14px;
     padding: 15px 40px;
     border-radius: 30px;
@@ -33,6 +42,23 @@ body {
 
 .btn:hover {
     transform: translateY(-3px);
+}
+
+
+.btn-about {
+    background-color: #ff5c5c;
+    margin-top: 100px; 
+}
+
+.btn-start {
+    padding: 25px 40px;
+    background-color: #ffe066;
+    font-size: 20px;
+}
+
+.btn-how {
+    background-color: #69c9d0;
+    margin-top: 100px; 
 }
 
 
