--- a/style.css
+++ b/style.css
@@ -2,23 +2,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body {
-    background-color: #009b9b;
+    /* background-color: #009b9b; */
+    background-image: url('./atividade\ 22.pptx.png');
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .button-container {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     gap: 40px; 
     align-items: flex-start;
 }
 .title {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-size: 50px;
     font-family: 'GrilledCheese BTN', sans-serif;
     color: #c4d16f; 
@@ -58,7 +62,7 @@ body {
 
 .btn-how {
     background-color: #69c9d0;
-    margin-top: 100px; 
+    margin-top: 50px; 
 }
 
 
