--- a/flashcard.css
+++ b/flashcard.css
@@ -10,7 +10,7 @@ body{
     margin: 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: 100%;
 }
 
 h1{
