--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 body {
     /* background-color: #009b9b; */
     background-image: url('./atividade\ 22.pptx.png');
+    overflow-x: hidden;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -12,28 +13,32 @@ body {
     margin: 0;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: 100%;
 }
 
 .button-container {
-    /* border: 1px solid black; */
     display: flex;
     gap: 40px; 
     align-items: flex-start;
 }
 .title {
-    /* border: 1px solid black; */
-    font-size: 50px;
-    font-family: 'GrilledCheese BTN', sans-serif;
-    color: #c4d16f; 
-      text-shadow: 
-        4px 4px 0px #2e0c57,   
-        6px 6px 0px #000;
-    /* position: absolute; */
+  /* border: 1px solid red; */
+  text-align: center;
+  font-size: 5rem;
+  font-family: 'GrilledCheese BTN', sans-serif;
+  color: #c4d16f; 
+    text-shadow: 
+      4px 4px 0px #2e0c57,   
+      6px 6px 0px #000;
+  /* position: absolute; */
+  padding: 0;
 }
+
 .btn {
     font-family: "Press Start 2P", system-ui;
     /* font-style: normal; */
+    text-decoration: none;
+    color: #000;
     font-size: 14px;
     padding: 15px 40px;
     border-radius: 30px;
@@ -46,12 +51,6 @@ body {
 
 .btn:hover {
     transform: translateY(-3px);
-}
-
-
-.btn-about {
-    background-color: #ff5c5c;
-    margin-top: 100px; 
 }
 
 .btn-start {
@@ -73,11 +72,6 @@ body {
 
 .btn-start {
     background-color: #ffe066;
-}
-
-.btn-how {
-    background-color: #69c9d0;
-    margin-top: 50px; 
 }
 
 /* ABOUT PAGE */
@@ -160,4 +154,56 @@ body {
   position: fixed;
   bottom: 0;
   right: 20%;
+}
+
+@media (max-width: 768px) {
+  .title{
+    font-size: 2.5rem;
+    /* background-color: #1c1c4d; */
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+  }
+  .button-container{
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  /* padding: 15px 30px; */
+  }
+
+.btn-how {
+    order: 3;
+    margin: 0px;
+    padding: 15px 20px;
+}
+
+
+.btn-about {
+    order: 2;
+    margin: 0;
+    padding: 15px 20px;
+}
+
+.btn-start {
+    order: 1;
+    padding: 20px 20px;
+}
+
+}
+
+
+@media (max-width: 480px) {
+  .title{
+    font-size: 2rem;
+    /* background-color: #1c1c4d; */
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
+  }
 }
