--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/grilledcheese-btn');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=VT323&display=swap');
 
 body {
     /* background-color: #009b9b; */
@@ -81,10 +82,12 @@ body {
 .note {
   color: #333;
   position: relative;
-  width: 400px;
+  width: 600px;
   margin: 0 auto;
   padding: 20px;
-  font-family: Satisfy;
+  font-family: "VT323", monospace;
+  font-weight: 400;
+  font-style: normal;
   font-size: 30px;
   /* box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.279); */
   box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.279), 4px 4px 0px #1c1c4d;
@@ -147,12 +150,16 @@ body {
   -o-transform-origin: 50% 100%;
 }
 
-.back_sign{
-  height: 200px;
+.back_sign {
+  display: inline-block;
+  width: 200px;
+  height: 180px;
+  background: url("./wooden-board-pixel-art-design-free-vector-removebg-preview.png") no-repeat center/contain;
   position: fixed;
+  right: 10%;
   bottom: 0;
-  right: 20%;
 }
+
 
 @media (max-width: 768px) {
   .title{
