--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
 .note {
   color: #333;
   position: relative;
-  width: 600px;
+  width: 50vw;
   margin: 0 auto;
   padding: 20px;
   font-family: "VT323", monospace;
@@ -160,6 +160,10 @@ body {
   bottom: 0;
 }
 
+h3, h3, p {
+  margin: 0;
+  font-size: 1em;
+}
 
 @media (max-width: 768px) {
   .title{
