--- a/flashcard.css
+++ b/flashcard.css
@@ -7,7 +7,7 @@ body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100svh;
     margin: 0;
     background-repeat: no-repeat;
     background-size: cover;
