--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=VT323&display=swap');
 
-html{
-  height: 100%;
-}
 body {
     /* background-color: #009b9b; */
     background-image: url('./atividade\ 22.pptx.png');
@@ -13,7 +10,7 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     background-repeat: no-repeat;
     background-size: cover;
@@ -159,8 +156,8 @@ body {
   height: 180px;
   background: url("./wooden-board-pixel-art-design-free-vector-removebg-preview.png") no-repeat center/contain;
   position: fixed;
-  right: 10%;
-  top: 85%;
+  right: 5%;
+  top: 75%;
 }
 
 h3, h4, p {
@@ -209,7 +206,7 @@ h3, h4, p {
 }
  .back_sign {
   width: 30vw;
-  position: fixed;
+  position: absolute;
   right: 70%;
   top: 75%;
 }
@@ -229,9 +226,9 @@ h3, h4, p {
 
   .back_sign {
   width: 30vw;
-  position: fixed;
+  position: absolute;
   right: 70%;
-  top: 75%;
+  top: 80%;
 }
 
 h3, h4, p {
