--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
+    min-height: 100svh;
     margin: 0;
     background-repeat: no-repeat;
     background-size: cover;
@@ -21,6 +22,8 @@ body {
     display: flex;
     gap: 40px; 
     align-items: flex-start;
+    position: fixed;
+    top: 70%;
 }
 .title {
   /* border: 1px solid red; */
@@ -32,6 +35,7 @@ body {
       4px 4px 0px #2e0c57,   
       6px 6px 0px #000;
   padding: 0;
+  line-height: 0.8;
 }
 
 .btn {
@@ -82,7 +86,7 @@ body {
 .note {
   color: #333;
   position: relative;
-  width: 70vw;
+  width: 60vw;
   margin: 0 auto;
   padding: 20px;
   font-family: "VT323", monospace;
@@ -157,7 +161,7 @@ body {
   background: url("./wooden-board-pixel-art-design-free-vector-removebg-preview.png") no-repeat center/contain;
   position: fixed;
   right: 5%;
-  top: 75%;
+  top: 80%;
 }
 
 h3, h4, p {
@@ -181,6 +185,8 @@ h3, h4, p {
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  position: fixed;
+  top: 60%;
   /* padding: 15px 30px; */
   }
 
@@ -204,11 +210,12 @@ h3, h4, p {
 h3, h4, p {
   font-size: 0.5em;
 }
- .back_sign {
+
+.back_sign {
   width: 30vw;
   position: absolute;
   right: 70%;
-  top: 75%;
+  top: 80%;
 }
 }
 
