--- a/flashcard.css
+++ b/flashcard.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.cdnfonts.com/css/grilledcheese-btn');
 
-tml, body {
-  height: 100%;
-  margin: 0;
-}
-
 body{
     min-height: 100dvh;
     min-height: 100svh;
@@ -14,15 +9,8 @@ body{
     flex-direction: column;
     align-items: center;
     /* background image + color */
-    /* background-image: url('./atividade\ 22.pptx.png');
-    
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    overflow-x: hidden; */
-     background: url('./atividade 22.pptx.png') center / cover no-repeat;
-  background-attachment: fixed; /* optional parallax effect */
-  background-color: #089da4;
+    background: url('./atividade 22.pptx.png') center / cover no-repeat;
+    background-attachment: fixed; 
 }
 
 h1{
@@ -32,8 +20,7 @@ h1{
     text-shadow: 
       4px 4px 0px #2e0c57,   
       6px 6px 0px #000;
-    padding: 0;
-    /* border: 1px solid; */
+    margin-top: 0;
     margin-bottom: 0;
 }
 
@@ -178,6 +165,17 @@ h1, p { margin: 0; padding: 0; }
   .back_name{
     font-size: 0.7em;
 }
+
+h1{
+    font-size: 4rem;
+  }
+
+.btn {
+    font-family: "Press Start 2P", system-ui;
+    /* font-style: normal; */
+    font-size: 10px;
+    padding: 15px 40px;
+  }
 }
 
 /* Medium screens (below 768px) */
