--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=VT323&display=swap');
 
+html, body{
+  height: 100%;
+}
 body {
     /* background-color: #009b9b; */
     background-image: url('./atividade\ 22.pptx.png');
@@ -10,7 +13,7 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    /* height: 100vh; */
+    min-height: 100dvh;
     min-height: 100svh;
     margin: 0;
     background-repeat: no-repeat;
