--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100%;
+    background-attachment: fixed;
 }
 
 .button-container {
